# Fast-API

./: 10_exception_handler.py  11_dependency_injection.py  12_middleware.py  13_sqlite.py  14_sqlalchemy.py  15_crud.py  16_async.py  17_jwt.py  18_OAuth2_jwt.py  19_file.py  1_first_API.py  20_cors.py  21_env_var.py  23_thirdpartyapi.py  24_webcrawling.py  25_cache_api.py  26_rate_limit.py  2_dynamic_route.py  3_query_params.py  4_post_api.py  5_pydantic_model.py  6_crud_op.py  7_path_query_body.py  8_response_model.py  9_status_code.py  config.py  pyproject.toml  test.db
22_pytest/: main.py  test_main.py
