[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "httpx2>=2.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=9.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
